--- a/buttons/slidebutton.html
+++ b/buttons/slidebutton.html
@@ -15,22 +15,22 @@
 			<input type="radio" name="r" id="r5">
 			<input type="radio" name="r" id="r6">
 			 <div class="slide s1">
-			 	<img src="galeria-01.jpg" alt="">
+			 	<img src="../imagens/galeria-01.jpg" alt="">
 			 </div>
 			 <div class="slide">
-			 	<img src="galeria-02.jpg" alt="">
+			 	<img src="../imagens/galeria-02.jpg" alt="">
 			 </div>
 			 <div class="slide">
-			 	<img src="galeria-03.jpg" alt="">
+			 	<img src="../imagens/galeria-03.jpg" alt="">
 			 </div>
 			 <div class="slide">
-			 	<img src="galeria-04.jpg" alt="">
+			 	<img src="../imagens/galeria-04.jpg" alt="">
 			 </div>
 			 <div class="slide">
-			 	<img src="galeria-05.jpg" alt="">
+			 	<img src="../imagens/galeria-05.jpg" alt="">
 			 </div>
 			 <div class="slide">
-			 	<img src="galeria-06.jpg" alt="">
+			 	<img src="../imagens/galeria-06.jpg" alt="">
 			 </div>
 		</div>
 	</div>
